...
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <subviews>
                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="user" translatesAutoresizingMaskIntoConstraints="NO" id="Yhm-gD-YCE">
                                    <rect key="frame" x="124" y="65" width="127" height="127"/>
                                    <constraints>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WTj-fd-NIZ">
                                                    <rect key="frame" x="16" y="0.0" width="343" height="51.5"/>
                                                    <nil key="textColor"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OcQ-oT-5QT">
                                                    <rect key="frame" x="16" y="0.0" width="343" height="51.5"/>
                                                    <nil key="textColor"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Mobile" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="G4C-Rz-jbj">
                                                    <rect key="frame" x="16" y="0.0" width="343" height="51.5"/>
                                                    <nil key="textColor"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kwi-61-erU">
                                                    <rect key="frame" x="16" y="0.0" width="343" height="51.5"/>
                                                    <nil key="textColor"/>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Save" style="done" id="S2j-0x-fGO">
                            <connections>
                                <action selector="saveContact:" destination="6HO-t9-ZPO" id="dMu-g6-zEM"/>
...
